--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ header .blank {
 .subsection input {
     width: 15%;
     margin: auto;
-    transform: scale(2,2);
+    transform: scale(2, 2);
     margin: 0;
     padding: 0;
     display: inline-block;
@@ -135,20 +135,174 @@ header .blank {
     cursor: pointer;
 }
 
-/* 
-input:focus{
-    border-bottom: 6px solid deepskyblue;
-    transition: border-bottom 0.5s;
-}
-input:invalid{
-    border-bottom: 6px solid red;
-    transition: border-bottom 0.5s;
-}
-input:valid{
-    border-bottom: 6px solid springgreen;
-    transition: border-bottom 0.5s;
-} */
-
 /* Header End */
 
 
+
+/* Menu Start */
+
+menu {
+    background: url(Images/bg.png) center/cover no-repeat;
+    padding-top: 85px;
+    height: 150vh;
+}
+
+menu>h3 {
+    margin-left: 135px;
+    color: #FFFFFF;
+    font-size: 3.2em;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: 400;
+}
+
+menu>p {
+    margin-left: 135px;
+    color: #FFFFFF;
+    font-size: 1.5em;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: 300;
+}
+
+menu>h3 span {
+    color: #81D165;
+    font-weight: 300;
+}
+
+#menuSection {
+    width: 43%;
+    margin: auto;
+    height: 20px;
+    margin-top: 90px;
+    padding-top: 25px;
+    border-radius: 5px;
+    background-color: #F7F7F7;
+    border: 0;
+    box-shadow: 1px 1px 3px 3px gray;
+    height: 50vh;
+
+}
+
+#menuSection .boxes {
+    width: 100%;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    margin-top: 25px;
+}
+
+#menuSection .boxes .box1 {
+    width: 15%;
+    margin: auto;
+}
+
+#menuSection .boxes .box2 {
+    width: 85%;
+    margin: auto;
+    text-align: left;
+}
+
+.box2>h3 {
+    font-size: 2.0em;
+    color: black;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-weight: 400;
+}
+
+.box2>p {
+    font-size: 1.2em;
+    color: black;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-weight: 400;
+}
+
+
+#menuSection .box1>.circle {
+    display: inline-block;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-color: #81D165;
+    margin-left: -50px
+}
+
+.web2>.circle {
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: #D4D4D4;
+}
+
+
+.web2 .circle a {
+    margin-top: 8px;
+    margin-left: 5px;
+    font-size: 1.4em;
+    color: white;
+    text-decoration: none;
+}
+
+.circle a {
+    margin-top: 8px;
+    margin-left: 0px;
+    font-size: 2em;
+}
+
+.circle a i {
+    margin-top: 25px;
+    margin-left: 25px;
+    font-size: 1.5em;
+    color: white;
+}
+
+
+menu #web {
+    width: 100%;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 25px;
+}
+
+menu .web1,
+.web2,
+.web3 {
+    width: 28%;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    justify-content: baseline;
+}
+
+menu .web1 h3 {
+    padding: 5px;
+    background-color: #8CD6F4;
+    color: white;
+    font-size: 2em;
+    padding-left: 15px;
+}
+
+menu .web3 h3 {
+    padding: 5px;
+    background-color: #8B9CBF;
+    color: white;
+    font-size: 2em;
+    padding-left: 15px;
+}
+
+menu .web1 i {
+    background-color: #73CBEF;
+    font-size: 2em;
+    color: white;
+    padding: 7px 10px;
+}
+
+
+.web3  i {
+    background-color: #7184AB;
+    font-size: 2em;
+    color: white;
+    padding: 7px 10px;
+}
+
+/* Menu End */
