--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ header {
 menu {
     background: url(Images/bg.png) center/cover no-repeat;
     padding-top: 85px;
-    height: 150vh;
+    padding-bottom: 125px;
 }
 
     menu > h3 {
@@ -176,7 +176,7 @@ menu {
     background-color: #F7F7F7;
     border: 0;
     box-shadow: 1px 1px 3px 3px gray;
-    height: 50vh;
+    height: 110vh;
 }
 
     #menuSection .boxes {
@@ -301,5 +301,113 @@ menu .web1 i {
     color: white;
     padding: 7px 10px;
 }
+
+
+#menuSection .MForm {
+    width: 80%;
+    margin: auto;
+    margin-top: 40px;
+}
+
+.MForm > h2 {
+    color: #787878;
+    font-weight: 600;
+    padding-left: 20px;
+}
+
+.MForm form {
+    margin-bottom: 50px;
+}
+
+    .MForm form .Message, .Key {
+        outline: none;
+        border: none;
+        width: 100%;
+        margin: auto;
+        margin-top: 40px;
+        padding-top: 15px;
+        border: 2px solid #E7E7E7;
+        border-radius: 5px;
+        margin-bottom: 50px;
+        font-size: 2.1em;
+        text-align: left;
+        color: #B0BEC4;
+        background-color: #F0F0F0;
+        display: flex;
+    }
+
+        .MForm form .Message .outer {
+            width: 10%;
+            margin: auto;
+            margin: 0;
+            height: 80%;
+            padding: 15px;
+            border-right: 1px solid #D5D5D5;
+        }
+
+    .MForm form .Key .outer {
+        width: 10%;
+        margin: auto;
+        margin: 0;
+        height: 80%;
+        padding: 15px;
+        border-right: 1px solid #D5D5D5;
+    }
+
+    .MForm form .Message .inner input {
+        outline: none;
+        border: none;
+        width: 90%;
+        margin: auto;
+        font-size: 2em;
+        text-align: left;
+        color: #B0BEC4;
+        background-color: #F0F0F0;
+        display: flex;
+    }
+
+    .MForm form .Key .inner input {
+        outline: none;
+        border: none;
+        width: 90%;
+        margin: auto;
+        font-size: 2em;
+        text-align: left;
+        color: #B0BEC4;
+        background-color: #F0F0F0;
+        display: flex;
+    }
+
+.MForm .Btn {
+    text-align: right;
+    margin-top: 45px;
+}
+
+    .MForm .Btn button {
+        background-color: #7BC760;
+        color: #E2E2E2;
+        padding: 15px;
+        border: none;
+        border-radius: 5px;
+        font-size: 2em;
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        font-weight: 600;
+        cursor: pointer;
+    }
+
+.MForm > p {
+    color: #B9B8B8;
+    font-size: 2em;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+    .MForm > p > span {
+        color: #7BC760;
+    }
+
+    .MForm > p span:hover {
+        cursor: pointer;
+    }
 
 /* Menu End */
