--- a/style.css
+++ b/style.css
@@ -146,7 +146,8 @@ menu {
 }
 
     menu > h3 {
-        margin-left: 135px;
+        width: 60%;
+        margin: auto;
         color: #FFFFFF;
         font-size: 3.2em;
         font-family: 'Times New Roman', Times, serif;
@@ -154,7 +155,8 @@ menu {
     }
 
     menu > p {
-        margin-left: 135px;
+        width: 60%;
+        margin: auto;
         color: #FFFFFF;
         font-size: 1.5em;
         font-family: 'Times New Roman', Times, serif;
@@ -319,7 +321,8 @@ menu .web1 i {
     margin-bottom: 50px;
 }
 
-    .MForm form .Message, .Key {
+    .MForm form .Message,
+    .Key {
         outline: none;
         border: none;
         width: 100%;
@@ -411,3 +414,834 @@ menu .web1 i {
     }
 
 /* Menu End */
+
+
+/* Sign-up-3 Start */
+
+.sign-up-3 {
+    padding-top: 1px;
+    padding-bottom: 100px;
+    background-color: #f2f2f2;
+}
+
+.container-4 {
+    width: 90%;
+    margin: auto;
+    position: relative;
+    padding-bottom: 20px;
+}
+
+    .container-4 > :first-child {
+        width: 100%;
+        margin: auto;
+        font-family: "Source Sans Pro", "Georigia";
+        color: #4f4f4f;
+    }
+
+        .container-4 > :first-child > :first-child {
+            text-align: center;
+            font-size: 90px;
+            margin-top: 150px;
+        }
+
+        .container-4 > :first-child > :last-child {
+            width: 50%;
+            margin: auto;
+            margin-top: 50px;
+            color: #b0b0b0;
+            font-size: 20px;
+            text-align: right;
+        }
+
+.register-2 {
+    display: grid;
+    grid-template-rows: 20% 80%;
+    width: 82%;
+    margin: auto;
+    background-color: #f5f5f5;
+    box-shadow: 0 0 15px gray;
+    position: relative;
+    z-index: 1;
+    margin-top: 30px;
+    border-radius: 10px;
+}
+
+    .register-2 > :first-child {
+        display: flex;
+        background-color: #34b7ce;
+        align-items: center;
+        border-radius: 10px 10px 0 0;
+    }
+
+        .register-2 > :first-child > :last-child {
+            font-size: 30px;
+            margin-left: 30px;
+            font-family: "Source Sans Pro", "sans-serif";
+            color: #fff;
+        }
+
+.c-12 {
+    margin-left: 30px;
+    height: 70px;
+    width: 70px;
+    background-color: #259cb1;
+    border-radius: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+    .c-12 > :first-child {
+        width: 30px;
+        height: 30px;
+    }
+
+.register-2 > :last-child {
+    display: grid;
+    grid-template-columns: 50% 50%;
+}
+
+.aside-login {
+    width: 85%;
+}
+
+.sb-3 {
+    width: 60%;
+    margin: auto;
+    margin-top: 55px;
+    display: flex;
+    justify-content: center;
+}
+
+    .sb-3 > :first-child {
+        background-color: #324e89;
+        border-radius: 5px 0 0 5px;
+        font-size: 2em;
+        color: white;
+        padding: 15px;
+    }
+
+    .sb-3 > :last-child {
+        background-color: #3c5a98;
+        padding: 15px;
+        color: white;
+        font-size: 2em;
+        border-radius: 0 5px 5px 0
+    }
+
+.span-3 {
+    font-size: 15px;
+}
+
+.aside-login > :nth-child(2) {
+    margin-top: 55px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.hr-4 {
+    width: 100%;
+}
+
+.span-4 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    margin: auto;
+    margin-top: -15px;
+    background-color: #eaeaea;
+    border-radius: 50%;
+    position: absolute;
+    margin-top: 0.5px;
+}
+
+    .span-4 > :first-child {
+        color: #bebebe;
+    }
+
+.aside-login > :nth-child(3) {
+    display: flex;
+    flex-direction: column;
+    width: 86%;
+    margin: auto;
+    margin-top: 50px;
+}
+
+    .aside-login > :nth-child(3) > :first-child,
+    .aside-login > :nth-child(3) > :nth-child(2) {
+        margin-bottom: 33px;
+        padding: 22px 20px;
+        border-radius: 10px;
+        outline: none;
+        border: 2px solid #dcdcdc;
+    }
+
+.aside-login > :last-child {
+    display: grid;
+    grid-template-columns: 60% 40%;
+    width: 86%;
+    margin: auto;
+    padding-bottom: 70px;
+}
+
+    .aside-login > :last-child > :last-child > button {
+        width: 100%;
+        font-size: 20px;
+        background-color: #00a0bc;
+        padding: 10px;
+        color: #fff;
+        border: none;
+        border-radius: 10px;
+    }
+
+    .aside-login > :last-child > :first-child {
+        display: flex;
+        align-items: center;
+    }
+
+        .aside-login > :last-child > :first-child > label {
+            color: #cbcbcb;
+            font-family: "Source Sans Pro", "Georgia";
+            font-weight: lighter;
+        }
+
+.circle-2 {
+    height: 80px;
+    width: 80px;
+    background-color: #81d165;
+    border-radius: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+}
+
+.aside-register {
+    position: relative;
+}
+
+.vl-2 {
+    display: none;
+}
+
+.aside-register > :nth-child(2) {
+    font-family: "Source Sans Pro", "sans-serif";
+    color: #838383;
+    width: 75%;
+    margin: auto;
+    position: relative;
+    margin-top: 20px;
+}
+
+.aside-register > :nth-child(3) {
+    width: 75%;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    margin-top: 30px;
+}
+
+    .aside-register > :nth-child(3) > input {
+        height: 45px;
+        outline: none;
+        border-radius: 10px;
+        border: 2px solid #dcdcdc;
+        margin-top: 10px;
+    }
+
+    .aside-register > :nth-child(3) > label {
+        margin-top: 20px;
+        font-family: "Source Sans Pro", "Georgia";
+        font-weight: lighter;
+        color: #999999;
+    }
+
+.aside-register > :last-child {
+    width: 75%;
+    margin: auto;
+    margin-top: 25px;
+    text-align: right;
+}
+
+    .aside-register > :last-child > button {
+        padding: 10px 0;
+        width: 43%;
+        font-size: 20px;
+        border-radius: 10px;
+        border: none;
+        color: #fff;
+        background-color: #ffc334;
+        font-family: "Source Sans Pro", "sans-serif";
+    }
+
+.c-1 {
+    position: absolute;
+    background-color: #79a0c0;
+    left: 20px;
+    top: 100px;
+}
+
+.c-2 {
+    width: 40px;
+    height: 40px;
+    left: 200px;
+    top: 80px;
+    background-color: #00a0bc;
+}
+
+.c-3 {
+    background-color: #4fb6e2;
+    left: 50px;
+    top: 600px;
+}
+
+.c-4 {
+    width: 40px;
+    height: 40px;
+    background-color: #4fb6e2;
+    left: 50px;
+    top: 800px;
+}
+
+.c-5 {
+    width: 60px;
+    height: 60px;
+    background-color: #ffc334;
+    left: 160px;
+    bottom: 100px;
+}
+
+.c-6 {
+    width: 50px;
+    height: 50px;
+    background-color: #00a0bc;
+    left: 500px;
+    bottom: 150px;
+}
+
+.c-7 {
+    width: 60px;
+    height: 60px;
+    background-color: #c5d4e1;
+    left: 600px;
+    bottom: 70px;
+}
+
+.c-8 {
+    width: 55px;
+    height: 55px;
+    right: 380px;
+    bottom: 90px;
+    background-color: #008bcf;
+}
+
+.c-9 {
+    width: 120px;
+    height: 120px;
+    background-color: #4fb6e2;
+    right: 50px;
+    top: 700px;
+}
+
+.c-10 {
+    width: 100px;
+    height: 100px;
+    background-color: #004e8f;
+    right: 40px;
+    top: 100px;
+}
+
+.c-11 {
+    background-color: #ffc334;
+    width: 40px;
+    height: 40px;
+    right: 180px;
+    top: 80px;
+}
+
+/* Sign-up-3 End */
+
+
+/* Sign-up-4 Start */
+
+.sign-up-4 {
+    background-color: #00a0bc;
+    padding-bottom: 110px;
+}
+
+    .sign-up-4 > :first-child {
+        width: 61%;
+        margin: auto;
+        padding-top: 110px;
+        color: #fff;
+        font-family: "Source Sans Pro", "Georgia";
+    }
+
+        .sign-up-4 > :first-child > h1 {
+            font-size: 40px;
+        }
+
+        .sign-up-4 > :first-child > h4 {
+            margin-top: 30px;
+            font-weight: lighter;
+            font-style: italic;
+        }
+
+.register-3 {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    width: 70%;
+    margin: auto;
+}
+
+.aside-login {
+    width: 100%;
+}
+
+.aside-register {
+    width: 100%;
+}
+
+.aside-login-2 > :last-child > :last-child > button {
+    background-color: #0289a1;
+}
+
+.aside-register-2 > :nth-child(3) > label {
+    color: #fff;
+}
+
+.aside-register-2 > :nth-child(2) {
+    color: #fff;
+}
+
+.aside-login-2 > :nth-child(2) > :last-child {
+    background-color: #75c0cd;
+}
+
+.aside-login-2 > :nth-child(2) > :first-child {
+    background-color: #65c4d4;
+}
+
+/* Sign-up-4 End */
+
+
+/* Sign-up-5 Start*/
+
+.sign-up-5 {
+    background-color: #374954;
+    padding-top: 70px;
+    padding-bottom: 120px;
+}
+
+    .sign-up-5 > :first-child {
+        width: 66%;
+        margin: auto;
+        margin-bottom: 50px;
+        font-size: 40px;
+        font-family: "Source Sans Pro";
+        font-weight: lighter;
+        color: #fff;
+        font-style: italic;
+    }
+
+.container-5 {
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: 40px;
+    width: 66%;
+    margin: auto;
+}
+
+.aside-login-3 > :first-child {
+    margin-bottom: 80px;
+}
+
+    .aside-login-3 > :first-child > input,
+    .aside-login-3 > :nth-child(2) > input {
+        background-color: transparent;
+        outline: none;
+        border: none;
+        border-bottom: 1px solid #7fc8f4;
+        width: 70%;
+        margin-left: 10px;
+        color: #fff;
+        font-family: "Source Sans Pro", "Georgia";
+        font-weight: lighter;
+    }
+
+    .aside-login-3 > :first-child > label,
+    .aside-login-3 > :nth-child(2) > label {
+        color: #e4e7e8;
+        font-family: "Source Sans Pro", "Georgia";
+        font-weight: lighter;
+        font-style: italic;
+        font-size: 20px;
+    }
+
+.aside-login-3 > :last-child {
+    display: grid;
+    grid-template-columns: auto auto;
+    margin-top: 65px;
+}
+
+    .aside-login-3 > :last-child > :first-child {
+        display: flex;
+        align-items: center;
+    }
+
+        .aside-login-3 > :last-child > :first-child > label {
+            font-family: "Source  Sans Pro", "Georgia";
+            font-weight: lighter;
+            font-style: italic;
+            color: #6a7d88;
+            margin-left: 15px;
+        }
+
+    .aside-login-3 > :last-child > :last-child > button {
+        width: 60%;
+        padding: 10px 0;
+        font-family: "Source Sans Pro", "Georgia";
+        font-weight: lighter;
+        font-style: italic;
+        color: #677984;
+        background-color: transparent;
+        border: 2px solid #5f737f;
+    }
+
+.aside-login-with > :last-child {
+    display: flex;
+    flex-direction: row;
+    margin-top: 50px;
+}
+
+.aside-login-with > :first-child {
+    color: #cccfd1;
+    font-family: "Source Sans Pro", "Georgia";
+    font-weight: lighter;
+}
+
+.aside-login-with > :last-child > :nth-child(2) {
+    margin: 0 20px;
+}
+
+.c-13 {
+    height: 50px;
+    width: 50px;
+    border: 2px solid #3960b0;
+    border-radius: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.c-14 {
+    border: 2px solid #00abf0;
+}
+
+.c-15 {
+    border: 2px solid #eb412e;
+}
+
+/* Sign-up-5 End */
+
+
+/* Sign-up-6 Start */
+
+.sign-up-6 {
+    background: url('Images/s6backgro.png') center/cover no-repeat;
+    background-color: rgba(87, 96, 114, 0.8);
+    padding-top: 80px;
+    padding-bottom: 80px;
+}
+
+.container-6 {
+    display: grid;
+    grid-template-rows: 21% 79%;
+    width: 40%;
+    margin: auto;
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 15px gray;
+    padding-bottom: 40px;
+}
+
+    .container-6 > .first {
+        display: flex;
+        width: 84%;
+        margin: auto;
+        align-items: center;
+    }
+
+    .container-6 > :first-child > :last-child {
+        font-size: 30px;
+        margin-left: 30px;
+        font-family: "Source Sans Pro", "Georgia";
+        font-weight: bold;
+        color: #505b71;
+    }
+
+.c-17 {
+    background-color: #365eab;
+    border: none;
+}
+
+.container-6 > .second {
+    width: 84%;
+    margin: auto;
+}
+
+    .container-6 > .second > form {
+        display: grid;
+        grid-template-columns: 55% 39%;
+        gap: 6%;
+    }
+
+        .container-6 > .second > form > :first-child > input,
+        .container-6 > .second > form > :last-child > input,
+        .container-6 > .second > :nth-child(2) > * {
+            width: 98%;
+            padding: 10px 0;
+            padding-left: 10px;
+            outline: none;
+            border: 2px solid #ebebeb;
+            border-radius: 5px;
+            font-family: "Source Sans Pro";
+            font-weight: bold;
+            margin-top: 20px;
+        }
+
+    .container-6 > .second > :nth-child(3) {
+        text-align: right;
+        margin-bottom: 20px;
+    }
+
+.same-btn {
+    width: 34%;
+    padding: 10px 0;
+    margin-top: 30px;
+    font-family: "Source Sans Pro";
+    margin-left: 30px;
+    margin-bottom: 30px;
+}
+
+.submit-btn {
+    border: 2px solid #365eab;
+    border-radius: 5px;
+    background-color: #365eab;
+    color: #fff;
+}
+
+.cancel-btn {
+    border: 2px solid #d8d8d8;
+    border-radius: 5px;
+    color: #868686;
+}
+
+
+.container-6 > .third {
+    text-align: right;
+    padding-right: 50px;
+    background-color: #F6F7F8;
+    font-size: 1em;
+    color: #6a7d88;
+    padding-top: 15px;
+    height: 5vh;
+    border-radius: 5px;
+}
+
+    .container-6 > .third > span {
+        color: #004e8f;
+    }
+
+/* Sign-up-6 End */
+
+@media only screen and (max-width:1024px) {
+    .sign-up > :first-child {
+        width: 90%
+    }
+
+    .container-2 > :last-child > :last-child > :first-child > label {
+        margin-left: 10px;
+    }
+
+    .container-2 > :last-child > :last-child > :first-child {
+        justify-content: center;
+    }
+
+    .container-2 > :last-child > :last-child {
+        display: block;
+    }
+
+    /* sign-up-2 */
+    .sign-up-2 {
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
+
+    .container-3 {
+        width: 90%;
+    }
+
+    .social-net {
+        gap: 10px;
+    }
+
+    .same-input {
+        padding-bottom: 5px;
+    }
+
+    .register-1 > :last-child > :last-child {
+        width: 100%;
+    }
+
+    .container-3 > :last-child > :first-child {
+        width: 90%;
+    }
+
+    .circle-1 {
+        height: 70px;
+        width: 70px;
+    }
+
+        .circle-1 > :first-child {
+            width: 30px;
+            height: 30px;
+        }
+
+    .register-1 {
+        margin-top: 50px;
+    }
+
+    .vl {
+        height: 70%;
+        top: 8%;
+    }
+
+    /* sign-up-3 */
+    .sign-up-3 {
+        padding-top: 50px;
+    }
+
+    .container-4 > :first-child {
+        width: 70%;
+    }
+
+    .register-2 {
+        margin-top: 50px;
+    }
+
+    .sb-3 {
+        width: 80%;
+        display: flex;
+        justify-content: center;
+    }
+
+    .aside-login {
+        width: 100%;
+    }
+
+        .aside-login > :last-child {
+            display: block;
+        }
+
+            .aside-login > :last-child > :first-child {
+                margin-top: -10px;
+            }
+
+            .aside-login > :last-child > :last-child > button {
+                margin-top: 20px;
+            }
+
+    .aside-register > :last-child > button {
+        width: 100%;
+        margin-top: 30px;
+    }
+
+    .c-1 {
+        width: 120px;
+        height: 120px;
+        left: -50px;
+    }
+
+    .c-2 {
+        left: 100px;
+    }
+
+    .c-3 {
+        left: 35px;
+    }
+
+    .c-4 {
+        top: 850px;
+        left: 30px;
+    }
+
+    .c-6 {
+        bottom: 150px;
+        left: 400px;
+    }
+
+    .c-11 {
+        right: 70px;
+        top: 40px;
+    }
+
+    .c-10 {
+        top: 120px;
+    }
+
+    .c-9 {
+        width: 150px;
+        height: 150px;
+        right: 20px;
+        border-radius: 70%;
+        top: 750px;
+    }
+
+    /* sign-up-5 */
+    .sign-up-5 > :first-child {
+        text-align: center;
+    }
+
+    .container-5 {
+        display: block;
+        text-align: center;
+    }
+
+    .aside-login-with > :first-child {
+        display: none;
+    }
+
+    .aside-login-with > :last-child {
+        justify-content: center;
+        margin-top: 50px;
+    }
+
+    .sign-up-5 > :first-child {
+        width: 56%;
+        margin-bottom: 50px;
+    }
+
+    .aside-login-3 > :last-child {
+        display: block;
+    }
+
+        .aside-login-3 > :last-child > :first-child {
+            text-align: center;
+            justify-content: center;
+            margin-bottom: 50px;
+        }
+
+    #menuSection {
+        width: 70%;
+        padding-bottom: 20px;
+    }
+
+    menu > p {
+        width: 75%;
+    }
+}
